# design-patterns-and-exception-handling

./: CMakeLists.txt  CMakeLists.txt~  Log.txt  NumberValidation.txt  README.md  main.cpp
Class/: CartItem.h  CartItem.h~  Function.h  Logger.h  Logger.h~  Order.h  PaymentStrategies.h  PaymentStrategies.h~  Product.h  ProductCatalog.h  ProductCatalog.h~  Shop.h  ShoppingCart.h  ShoppingCart.h~
